--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.myproj'
+    namespace 'com.example.myproj2'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.myproj"
+        applicationId "com.example.myproj2"
         minSdk 26
         targetSdk 33
         versionCode 1
@@ -33,11 +33,18 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //Gson
+        implementation 'com.google.code.gson:gson:2.10.1'
+
+
     //Glide:
     implementation 'com.github.bumptech.glide:glide:4.15.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
+  //  annotationProcessor 'com.github.bumptech.glide:compiler:GlideVersion'
+
 }
